--- a/templates/clothings.html
+++ b/templates/clothings.html
@@ -68,9 +68,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
             </ul>
           </div>
         </div>
@@ -109,7 +106,7 @@ https://templatemo.com/tm-546-raheem-enterprises
         <a href="/marvins"><button>MARVINS</button></a>
     </div>
     <div class="col-3">
-         <a href=""><button>T-SHIRTS</button></a>
+         <a href="/shirts"><button>T-SHIRTS</button></a>
     </div>
     <div class="col-3"></div>
 
@@ -117,10 +114,10 @@ https://templatemo.com/tm-546-raheem-enterprises
 
 <div class="row ml-5 mt-5">
     <div class="col-4">
-       <a href=""><button>TROUSERS</button></a>
+       <a href="/trousers"><button>TROUSERS</button></a>
     </div>
      <div class="col-4">
-       <a href=""><button>DRESSES</button></a>
+       <a href="/dresses"><button>DRESSES</button></a>
     </div>
      <div class="col-4">
         <a href="/scarves"><button>SCARVES</button></a>
