--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -87,48 +87,81 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a href="/shoes"><button type="button" class="btn btn-outline-danger">Explore</button></a>
             </td>
         </tr>
-    <tr>
-        <td>Classic Hoodies</td>
-                <td>Nike,Vans,Adidas,Louis Voitton</td>
-                <td>1500</td>
-                <td style="height: 30px">
-                    <a href="/hoodies"><button type="button" class="btn btn-outline-danger">Explore</button></a>
-                </td>
-    </tr>
-    <tr>
-        <td>Classic Scarves</td>
-                <td>Versace,Vans,Adidas,Louis Voitton</td>
-                <td>500</td>
-                <td style="height: 30px">
-                    <a href="/scarves"><button type="button" class="btn btn-outline-danger">Explore</button></a>
-                </td>
-    </tr>
-    <tr>
-        <td>Blankets</td>
-                <td>Woolen,Cotton,Hand made,Soft</td>
-                <td>3000</td>
-                <td style="height: 30px">
-                    <a href="/blankets"><button type="button" class="btn btn-outline-danger">Explore</button></a>
-                </td>
-    </tr>
-    <tr>
-        <td>Pull Neck Sweaters</td>
-                <td>Polo Neck,Knit,Elastic</td>
-                <td>1500</td>
-                <td style="height: 30px">
-                    <a href="/pull_necks"><button type="button" class="btn btn-outline-danger">Explore</button></a>
-                </td>
-    </tr>
-    <tr>
-        <td>Classic Marvins</td>
-                <td>Designer,Fuzzy Knits,Kings Collection</td>
-                <td>1000</td>
-                <td style="height: 30px">
-                    <a href="/marvins"><button type="button" class="btn btn-outline-danger">Explore</button></a>
-                </td>
-    </tr>
+        <tr>
+            <td>Classic Hoodies</td>
+            <td>Nike,Vans,Adidas,Louis Voitton</td>
+            <td>1500</td>
+            <td style="height: 30px">
+                <a href="/hoodies"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Classic Scarves</td>
+            <td>Versace,Vans,Adidas,Louis Voitton</td>
+            <td>500</td>
+            <td style="height: 30px">
+                <a href="/scarves"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Blankets</td>
+            <td>Woolen,Cotton,Hand made,Soft</td>
+            <td>3000</td>
+            <td style="height: 30px">
+                <a href="/blankets"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Pull Neck Sweaters</td>
+            <td>Polo Neck,Knit,Elastic</td>
+            <td>1500</td>
+            <td style="height: 30px">
+                <a href="/pull_necks"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Classic Marvins</td>
+            <td>Designer,Fuzzy Knits,Kings Collection</td>
+            <td>1000</td>
+            <td style="height: 30px">
+                <a href="/marvins"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Dresses</td>
+            <td>Mini,Long,Knee Size</td>
+            <td>1000</td>
+            <td>
+                <a href="/dresses"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Trousers</td>
+            <td>Official,Jeans,Fit</td>
+            <td>1800</td>
+            <td>
+                <a href="/trousers"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>T-Shirts</td>
+            <td>Official,Fashion,Tops</td>
+            <td>1500</td>
+            <td>
+                <a href="/shirts"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
+        <tr>
+            <td>Skirts</td>
+            <td>Official,Mini,Long,Denim</td>
+            <td>1500</td>
+            <td>
+                <a href="/skirts"><button type="button" class="btn btn-outline-danger">Explore</button></a>
+            </td>
+        </tr>
     </table>
     <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
+    <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
     <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
 
       <footer>
