--- a/templates/products_dash.html
+++ b/templates/products_dash.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div class="col-3"><button>BABY FORMULAE</button></div>
         <div class="col-3"></div>
     </div>
-
+<a class="navbar-brand btn-block  text-center" href="/"><h2><button class="mt-5">Home</button></h2></a>
 
 
  <footer>
