--- a/templates/tshirts.html
+++ b/templates/tshirts.html
@@ -70,33 +70,41 @@ https://templatemo.com/tm-546-raheem-enterprises
         </div>
       </nav>
     </header>
-    <br><br><br><br><h2 class="text-center">Skirts Dashboard</h2>
-    <div class="row">
-        <div class="col-3">
-            <img src="../static/images/skirts/images.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/download.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/1.jpg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
-        </div>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
-        </div>
+    <br><br><br><br><h1 class="text-center">T-SHIRTS <em class="text-danger">DASHBOARD</em></h1>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/image.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(2).jpeg" height="300" width="300" alt="">
-        </div>
+<div class="row">
+    <div class="col-3">
+        <img src="../static/images/shirts/6317d553f7a5fb0b4ec774437620634394704dfa.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/22270c2343fb0436f4e30f9e2532598c.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/wmfzhgA.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/13273721_img-20201012-wa0046_963x1280.jpg" height="300" width="280" alt="">
+    </div>
 
+    <div class="col-3">
+        <img src="../static/images/shirts/15499965_cbbb92d0-72e7-4a1d-bf5c-c12e6d387c29_1200x1600.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/classic-mens-shirts-stacked-260nw-540553141.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/dQ7Ma9A.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/IMG-20210511-WA0095.jpg" height="300" width="280" alt="">
+    </div>
+
+    <div class="col-3">
+        <img src="../static/images/shirts/IMG-20210511-WA0062.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/H2bd7d12a17e24995aaafe41e60d91f6aq.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/girl-tops-tees-polo-ralph-lauren.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/IMG_9190-2.jpg" height="300" width="280" alt="">
+    </div>
+
+    <div class="col-3">
+        <img src="../static/images/shirts/IMG-20210511-WA0089.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/IMG-20210511-WA0082.jpg" height="300" width="280"  alt="">
+        <img src="../static/images/shirts/IMG-20210511-WA0087.jpg" height="300" width="280" alt="">
+        <img src="../static/images/shirts/men-s-classic-shirt-500x500.jpg" height="300" width="280" alt="">
+    </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
-    </div>
+</div>
 
 
   <footer>
@@ -136,6 +144,7 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 
 </body>
 </html>
