--- a/templates/dresses.html
+++ b/templates/dresses.html
@@ -70,36 +70,42 @@ https://templatemo.com/tm-546-raheem-enterprises
         </div>
       </nav>
     </header>
-    <br><br><br><br><h2 class="text-center">Skirts Dashboard</h2>
+
+    <br><br><br><br><h1 class="text-center">DRESSES <em class="text-danger">DASHBOARD</em></h1>
     <div class="row">
         <div class="col-3">
-            <img src="../static/images/skirts/images.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/download.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/1.jpg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/images.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/18455033_img-20210322-wa0042_1063x1250.jpg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/7-1_2048x.jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/31HwB+y+J-L._SL500_.jpg" height="300" width="280" alt="">
         </div>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
+        <div class="col-3">
+            <img src="../static/images/dresses/bodycon-collection-sophia-bandage-mini-dress-classic-black-womens-dresses-and-apparel-online-15169690763343_800x.jpg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/dress-silo-sliderpng.png" height="300" width="400" alt="">
+            <img src="../static/images/dresses/619b0c81c3dd8c2316f957c903331f01.jpg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/61hYNSzMuoL._AC_UL1001_.jpg" height="300" width="280" alt="">
         </div>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/image.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(2).jpeg" height="300" width="300" alt="">
+        <div class="col-3">
+            <img src="../static/images/dresses/images%20(1).jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/w2000_q80.jpg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/shelly_large.png" height="300" width="280" alt="">
+            <img src="../static/images/dresses/e34fe78d2d1137f4a5157ffc36a6f45a.jpg" height="300" width="280" alt="">
         </div>
 
+        <div class="col-3">
+            <img src="../static/images/dresses/images%20(2).jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/images%20(3).jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/images%20(4).jpeg" height="300" width="280" alt="">
+            <img src="../static/images/dresses/images%20(5).jpeg" height="300" width="280" alt="">
+        </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
-
-  <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -136,6 +142,7 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 
 </body>
 </html>
