--- a/templates/trousers.html
+++ b/templates/trousers.html
@@ -47,59 +47,70 @@ https://templatemo.com/tm-546-raheem-enterprises
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link" href="/products">
-                   Products
-                  </a>
-                </li>>
+              <li class="nav-item active">
+                    <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="/products_dash">
+                      Products
+                    </a>
+                </li>
+              </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contacts</a>
               </li>
-                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
+              </li>
+                <li> class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <br><br><br><br><h2 class="text-center">Skirts Dashboard</h2>
-    <div class="row">
-        <div class="col-3">
-            <img src="../static/images/skirts/images.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/download.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/1.jpg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/2147759_img-20190806-wa0031_638x509.jpg" height="300" width="280" alt="">
-        </div>
+    <br><br><br><br><h1 class="text-center">TROUSERS <em class="text-danger">DASHBOARD</em></h1>
+<div class="row">
+    <div class="col-3">
+        <img src="../static/images/trousers/1550610923-carhartt-1550610904.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/1d6692e1ac46263c702003b360f52e6f02e9ff61.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/13960498_photogrid-plus-1604150320086_1024x1024.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/images.jpeg" height="300" width="280" alt="">
+    </div>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/c7da7ef6f9e8356732df54da681c82784f6f64e4_original.jpeg" height="300" width="280" alt="">
-            <img src="../static/images/skirts/Red-Skirt-.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/35434730qu_23_a.jpg" alt="" height="300" width="280">
-            <img src="../static/images/skirts/only-black-denim-skirt-blush_z-1613755-G.jpg" alt="" height="300" width="280">
-        </div>
+    <div class="col-3">
+        <img src="../static/images/trousers/images%20(1).jpeg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/422200393_1.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/05920P05.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/61tYrL1dVCL._AC_UX342_.jpg" height="300" width="280" alt="">
+    </div>
 
-        <div class="col-4">
-            <img src="../static/images/skirts/image.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/WB4315-BLACK-1_1024x1024.jpg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(1).jpeg" height="300" width="300" alt="">
-            <img src="../static/images/skirts/images%20(2).jpeg" height="300" width="300" alt="">
-        </div>
-
+    <div class="col-3">
+        <img src="../static/images/trousers/images%20(2).jpeg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/men-s-work-trousers-1-1541155271.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/low-classic-layered-wide-leg-trousers_16067707_32709867_400.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/istockphoto-866103730-612x612.jpg" height="300" width="280" alt="">
+    </div>
+    
+    <div class="col-3">
+        <img src="../static/images/trousers/helikon-woodsman-trousers-taiga-green-black-%5B9%5D-57259-p.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/images%20(3).jpeg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/www.ilgufo.com--P21PL030C3124_110-01.jpg" height="300" width="280" alt="">
+        <img src="../static/images/trousers/Taylor-Stitch-The-Camp-Pant.jpg" height="300" width="280" alt="">
+    </div>
         <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/clothings"><h2><button>Clothings<em class="text-danger">Dashboard</em></button></h2></a>
         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
-    </div>
+</div>
 
-
-  <footer>
+<footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -113,7 +124,8 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-   <!-- Bootstrap core JavaScript -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
