--- a/templates/b_seats.html
+++ b/templates/b_seats.html
@@ -71,45 +71,47 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">Foam Potty Seats <em class="text-danger">Dashboard</em></h1>
+    <br><br><br><br><h1 class="text-center">Bath Seats <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
         <div class="col-3">
-            <img src="../static/images/bathings/seats/images.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/1.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/image.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/71QgyqsOW6L._AC_UL320_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/71wydHc8O6L._AC_SS450_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/71y4bQRMz3L.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/82c1146940c6b64b24427eb73c8cd2f9.jpg" height="300" width="300" alt="">
         </div>
 
-          <div class="col-3">
-            <img src="../static/images/bathings/seats/216ff160-6033-4f3d-9392-3820b4ca3ff2_1.07785a408d8f1813b451944ab60cf23f.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/999999-887961043143_6.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/eeaa4384b264b74445e30f3db56f9998.jpg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/f64c17af-d405-452f-bf16-ccd48deb6d96_1.603463565c1416938b7e22dd20f539b6.jpeg" height="300" width="300" alt="">
-          </div>
+        <div class="col-3">
+            <img src="../static/images/bathings/b_seats/46848_1_8.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/10099025.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/3661787099488.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/totsstore-baby-bath-seat.jpg" height="300" width="300" alt="">
+        </div>
 
-          <div class="col-3">
-            <img src="../static/images/bathings/seats/GUEST_9db64477-29bc-4ea6-9669-9632f4b05dc0.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/jpg.png" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/76a52d23-2497-4fd2-904f-78d481aba77a_1.880ff6305bf09dd5dc0864fe913c36f4.jpeg" height="300" width="300" alt="">
-            <img src="../static/images/bathings/seats/the-first-years-sure-comfort-deluxe-newborn-to-toddler-tub_1536x680.jpg" height="300" width="300" alt="">
-          </div>
+        <div class="col-3">
+            <img src="../static/images/bathings/b_seats/images%20(4).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(9).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(8).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(1).jpeg" height="300" width="300" alt="">
+        </div>
 
-          <div class="col-3">
-              <img src="../static/images/bathings/seats/images%20(2).jpeg" height="300" width="300" alt="">
-              <img src="../static/images/bathings/seats/images%20(1).jpeg" height="300" width="300" alt="">
-              <img src="../static/images/bathings/seats/images%20(4).jpeg" height="300" width="300" alt="">
-              <img src="../static/images/bathings/seats/images%20(3).jpeg" height="300" width="300" alt="">
-          </div>
+        <div class="col-3">
+            <img src="../static/images/bathings/b_seats/images%20(7).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(6).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(5).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/b_seats/images%20(3).jpeg" height="300" width="300" alt="">
+        </div>
          <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
+
 
     <footer>
       <div class="container">
