--- a/templates/bathings.html
+++ b/templates/bathings.html
@@ -95,23 +95,23 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <div class="row mt-5 ml-5">
         <div class="col-4">
-            <a href=""><button>BATH THERMOMETER</button></a>
+            <a href="/thermo"><button>BATH THERMOMETER</button></a>
         </div>
         <div class="col-4">
-            <a href=""><button>BATH SUPPORT HAMMOCKS</button></a>
+            <a href="/hammocks"><button>BATH SUPPORT HAMMOCKS</button></a>
         </div>
         <div class="col-4">
-            <a href=""><button>BATH SEATS</button></a>
+            <a href="/b_seats"><button>BATH SEATS</button></a>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>BATH TIDIES</button></a>
+            <a href="/tidies"><button>BATH TIDIES</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>SOFT TOUCH</button></a>
+            <a href="/touch"><button>SOFT TOUCH</button></a>
         </div>
         <div class="col-3"></div>
     </div>
