--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1058,3 +1058,7 @@ footer .inner-content p a {
 		bottom: 0;
 	}
 }
+#bg4{
+	background-image: url("../images/bathings/bags/51o-UvXLLNL.jpg");
+
+}
