--- a/templates/bags.html
+++ b/templates/bags.html
@@ -53,10 +53,9 @@ https://templatemo.com/tm-546-raheem-enterprises
               <li class="nav-item active">
                     <!-- Dropdown -->
                 <li class="nav-item">
-                    <a class="nav-link" href="/products">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-
                 </li>
               </ul>
               </li>
@@ -70,67 +69,53 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BATHINGS <em class="text-danger">DASHBOARD</em></h1>
+    <div>
+    <br><br><br><br><h1 class="text-center">Changing Bags <em class="text-danger">Dashboard</em></h1>
+    </div>
 
     <div class="row">
-        <div class="col-3"></div>
         <div class="col-3">
-            <a href="/tubs"><button>BATH TUBS</button></a>
+            <img src="../static/images/bathings/bags/download.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(2).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/51o-UvXLLNL.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/71g-6+gFBpL._SX466_.jpg" height="300" width="300" alt="">
         </div>
+
         <div class="col-3">
-            <a href="/seats"><button>FOAM POTTY SEAT</button></a>
+            <img src="../static/images/bathings/bags/images%20(10).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/download%20(2).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(9).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(8).jpeg" height="300" width="300" alt="">
         </div>
-        <div class="col-3"></div>
+
+        <div class="col-3">
+            <img src="../static/images/bathings/bags/images%20(7).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(6).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(3).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(5).jpeg" height="300" width="300" alt="">
+        </div>
+
+        <div class="col-3">
+            <img src="../static/images/bathings/bags/images%20(1).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(4).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(2).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/bags/images%20(10).jpeg" height="300" width="300" alt="">
+                <p>Kshs 1500</p>
+        </div>
+         <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
-    <div class="row mt-5 ml-5">
-        <div class="col-4">
-            <a href="/thermo"><button>BATH THERMOMETER</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/hammocks"><button>BATH SUPPORT HAMMOCKS</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/b_seats"><button>BATH SEATS</button></a>
-        </div>
-    </div>
-
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/tidies"><button>BATH TIDIES</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/touch"><button>SOFT TOUCH</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row ml-5 mt-5">
-        <div class="col-4">
-            <a href="/bags"><button>CHANGING BAGS</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/mats"><button>BATH MAT</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/toys"><button>BATH TOYS</button></a>
-        </div>
-        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
-    </div>
-
-
-
-
-    <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -144,7 +129,8 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-   <!-- Bootstrap core JavaScript -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -167,5 +153,6 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 </body>
 </html>
