--- a/templates/products.html
+++ b/templates/products.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-546-raheem-enterprises
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
+            <ul style="list-style-type: none;" class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -58,7 +58,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </a>
 
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
