--- a/templates/toys.html
+++ b/templates/toys.html
@@ -70,67 +70,26 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
+                <a class="nav-link" href="/login">Login</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BATHINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Bath Toys <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3"></div>
         <div class="col-3">
-            <a href="/tubs"><button>BATH TUBS</button></a>
+            <img src="../static/images/bathings" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
         </div>
-        <div class="col-3">
-            <a href="/seats"><button>FOAM POTTY SEAT</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row mt-5 ml-5">
-        <div class="col-4">
-            <a href="/thermo"><button>BATH THERMOMETER</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/hammocks"><button>BATH SUPPORT HAMMOCKS</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/b_seats"><button>BATH SEATS</button></a>
-        </div>
-    </div>
-
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/tidies"><button>BATH TIDIES</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/touch"><button>SOFT TOUCH</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row ml-5 mt-5">
-        <div class="col-4">
-            <a href="/bags"><button>CHANGING BAGS</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/mats"><button>BATH MAT</button></a>
-        </div>
-        <div class="col-4">
-            <a href="/toys"><button>BATH TOYS</button></a>
-        </div>
-        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
 
 
-    <footer>
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -167,5 +126,6 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 </body>
 </html>
