--- a/templates/bibs.html
+++ b/templates/bibs.html
@@ -52,11 +52,10 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products">
+                <li class="nav-item">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-
                 </li>
               </ul>
               </li>
@@ -72,52 +71,35 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Bibs & Muslin Square Dashboard</h1>
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/bibs"><button>BIBS & MUSLIN SQUARE</button></a>
+        <div class="col-6">
+            <img src="../static/images/feedings/bibs/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/bibs/5059187060999.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/bibs/5059187060999_A.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/bibs/liewood-lai-bib-classic-dot-mix-2-pack_400x.jpg" height="300" width="300" alt="">
         </div>
-        <div class="col-3">
-            <a href="/bottles"><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/soothers"><button>SOOTHERS & TEETHERS</button></a>
+        <div class="col-6 mt-5">
+            <img src="../static/images/feedings/bibs/liewood-tilda-silicone-bibs-dino-dove-blue-mix-2-pack_400x.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/bibs/SNUG-N-DRY-BIB-GREY-500X500-300x300.png" height="300" width="300" alt="">
+            <img src="../static/images/feedings/bibs/images%20(3).jpeg" height="300" alt="">
+            <img src="../static/images/feedings/bibs/5059187060999_A%20(1).jpeg" height="300" width="300" alt="">
         </div>
-        <div class="col-3">
-            <a href=""><button>BREASTFEEDING ITEMS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
-        </div>
-        <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
+         <a class="navbar-brand btn-block  text-center" href="/feeds"><h2><button>Feedings<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
- <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
