--- a/templates/toys.html
+++ b/templates/toys.html
@@ -82,9 +82,36 @@ https://templatemo.com/tm-546-raheem-enterprises
 
     <div class="row">
         <div class="col-3">
-            <img src="../static/images/bathings" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+            <img src="../static/images/bathings/toy/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/57543de9bee259a2bdb150b730078b66.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/s-l300.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/71Qox6lZgsL.__AC_SX300_SY300_QL70_ML2_.jpg" height="300" width="300" alt="">
         </div>
+
+        <div class="col-3">
+            <img src="../static/images/bathings/toy/81NcsmCqd7L._AC_UL320_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/97b8b95ae96cf87fc71f811c64bb724d.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/216-370_Product_Group_Shot_large.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/510Vcgoiu9L._SL250_.jpg" height="300" width="300" alt="">
+        </div>
+
+        <div class="col-3">
+            <img src="../static/images/bathings/toy/614bS+PYaSS._AC_UL320_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/baby-bath-toys-set-of-14-for-boys-girls-kids-baby-wishkey-original-imafjy8afwxpttg7.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/boat2.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/duck-family-bath-toy-white-popcorn-original-imaff74hquydynxy.jpeg" height="300" width="300" alt="">
+        </div>
+
+        <div class="col-3">
+            <img src="../static/images/bathings/toy/il_340x270.2978588301_phm2.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/s-l225.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/SA100a_255x255.jpg" height="300" width="300" alt="">
+            <img src="../static/images/bathings/toy/images%20(1).jpeg" height="300" width="300" alt="">
+        </div>
+         <a class="navbar-brand btn-block  text-center" href="/bathings"><h2><button>Bathings<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
+
 
 
 
