--- a/templates/chairs.html
+++ b/templates/chairs.html
@@ -52,13 +52,11 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products">
+                <li class="nav-item">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-
                 </li>
-
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -72,51 +70,32 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BABY FORMULAE <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">High Chairs <em class="text-danger">Dashboard</em></h1>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Aptamil Range</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>SMA Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+    <div class="row">
+        <div class="col-6">
+            <img src="../static/images/feedings/chairs/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/chairs/1.jpg" alt="">
+            <img src="../static/images/feedings/chairs/51Fk46+rE7L._AC_SL1024_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/chairs/51r55GOT5lL._AC_SS450_.jpg" height="300" width="300" alt="">
         </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Cow & Gate Formulae</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Kendamil Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+        <div class="col-6 mt-5">
+            <img src="../static/images/feedings/chairs/71rKC1e08nS._AC_UL320_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/chairs/Best-High-Chairs-for-Small-Spaces-in-2020.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/chairs/GUEST_0a9dcde6-786a-4459-9849-2d570ac660be.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/chairs/images%20(1).jpeg" height="300" width="300" alt="">
         </div>
-
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Hipp Milk</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Mammy Care Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-
+         <a class="navbar-brand btn-block  text-center" href="/feeds"><h2><button>Feedings<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
+    </div>
 
    <footer>
       <div class="container">
