--- a/templates/feedings.html
+++ b/templates/feedings.html
@@ -58,7 +58,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </a>
 
                 </li>
-              </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -108,12 +107,13 @@ https://templatemo.com/tm-546-raheem-enterprises
     <div class="row mt-5">
          <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>HIGH CHAIRS</button></a>
+            <a href="/chairs"><button>HIGH CHAIRS</button></a>
         </div>
         <div class="col-3">
-            <a href=""><button>BOOSTER SEATS</button></a>
+            <a href="/h_chairs"><button>BOOSTER SEATS</button></a>
         </div>
         <div class="col-3"></div>
+        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
