--- a/templates/huggies.html
+++ b/templates/huggies.html
@@ -58,7 +58,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </a>
 
                 </li>
-
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -81,44 +80,27 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BABY FORMULAE <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Huggies <em class="text-danger">Dashboard</em></h1>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Aptamil Range</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>SMA Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+    <div class="row">
+        <div class="col-6">
+            <img src="../static/images/diapers/huggies/download.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/81fhEqZaXeL._AC_SL1500_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/BY0374.jpg" height="300" width="300" alt="">
         </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Cow & Gate Formulae</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Kendamil Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+        <div class="col-6 mt-5">
+            <img src="../static/images/diapers/huggies/product-500x500.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/images%20(3).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/images%20(2).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/huggies/images%20(1).jpeg" height="300" width="300" alt="">
         </div>
+         <a class="navbar-brand btn-block  text-center" href="/diapers"><h2><button>Diapers<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
+    </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Hipp Milk</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Mammy Care Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-
-
-   <footer>
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -132,8 +114,7 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-
-    <!-- Bootstrap core JavaScript -->
+   <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
