--- a/templates/pampers.html
+++ b/templates/pampers.html
@@ -58,7 +58,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </a>
 
                 </li>
-
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -81,43 +80,24 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BABY FORMULAE <em class="text-danger">DASHBOARD</em></h1>
-
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Aptamil Range</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>SMA Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+    <br><br><br><br><h1 class="text-center">Pampers<em class="text-danger">Dashboard</em></h1>
+    
+    <div class="row">
+        <div class="col-6">
+            <img src="../static/images/diapers/pampers/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/pampers/download.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/pampers/81QYB-qMIhL._SL1500_.jpg" height="300" width="300" alt="">
         </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Cow & Gate Formulae</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Kendamil Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+        <div class="col-6 mt-5">
+            <img src="../static/images/diapers/pampers/81ulPkdJ-4L._SL1500_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/pampers/pampers-baby-pant-diapers-m-76-mrp-1049--500x500.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/pampers/Ua5e718f0cddb4ceeb2e96c4f11b5c58fJ.jpeg" height="300" width="300" alt="">
         </div>
-
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Hipp Milk</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Mammy Care Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-
-
+         <a class="navbar-brand btn-block  text-center" href="/diapers"><h2><button>Diapers<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
+    </div>
+    
    <footer>
       <div class="container">
         <div class="row">
@@ -132,8 +112,7 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-
-    <!-- Bootstrap core JavaScript -->
+   <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
