--- a/templates/diapers.html
+++ b/templates/diapers.html
@@ -50,23 +50,29 @@ https://templatemo.com/tm-546-raheem-enterprises
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/products">
-                   Products
-                  </a>
+              <li class="nav-item active">
+                    <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="/products">
+                      Products
+                    </a>
+
                 </li>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contacts</a>
               </li>
-                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
+              </li>
+                <li> class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
             </ul>
           </div>
@@ -79,7 +85,7 @@ https://templatemo.com/tm-546-raheem-enterprises
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <a href=""><button class="justify-content-center">PAMPERS</button></a>
+            <a href="/pampers"><button class="justify-content-center">PAMPERS</button></a>
         </div>
         <div class="col-4"></div>
     </div>
@@ -87,7 +93,7 @@ https://templatemo.com/tm-546-raheem-enterprises
     <div class="row mt-5">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href=""><button>HUGGIES</button></a>
+            <a href="/huggies"><button>HUGGIES</button></a>
         </div>
         <div class="col-3">
             <a href=""><button>LITTLE ANGELS</button></a>
@@ -105,7 +111,7 @@ https://templatemo.com/tm-546-raheem-enterprises
         </div>
         <div class="col-3"></div>
     </div>
-
+     <a class="navbar-brand mt-5 btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
 
   <footer>
       <div class="container">
@@ -118,8 +124,6 @@ https://templatemo.com/tm-546-raheem-enterprises
             </div>
           </div>
         </div>
-          <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
-          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
       </div>
     </footer>
 
