--- a/templates/seats.html
+++ b/templates/seats.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -52,13 +53,11 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products">
+                <li class="nav-item">
+                    <a class="nav-link" href="/products_dash">
                       Products
                     </a>
-
                 </li>
-
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -72,53 +71,34 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
+
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">BABY FORMULAE <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Booster Seats<em class="text-danger">Dashboard</em></h1>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Aptamil Range</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>SMA Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+    <div class="row">
+        <div class="col-6">
+            <img src="../static/images/feedings/seats/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/41eueiiNJgL.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/71qPKIUo1bL._SL1500_.jpg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/gracohighbackseat-fd8be3b6c13a41149384e711e0dd497d.jpg" height="300" width="300" alt="">
         </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Cow & Gate Formulae</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Kendamil Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
+        <div class="col-6 mt-5">
+            <img src="../static/images/feedings/seats/images%20(1).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/images%20(2).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/images%20(3).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/feedings/seats/images%20(4).jpeg" height="300" width="300" alt="">
         </div>
+               <a class="navbar-brand btn-block  text-center" href="/feeds"><h2><button>Feedings<em class="text-danger">Dashboard</em></button></h2></a>
+               <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
+    </div>
 
-        <div class="row mt-5">
-            <div class="col-3"></div>
-            <div class="col-3">
-                <a href=""><button>Hipp Milk</button></a>
-            </div>
-            <div class="col-3">
-                <a href=""><button>Mammy Care Formulae</button></a>
-            </div>
-            <div class="col-3"></div>
-        </div>
-
-
-
-   <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
